# python_labs

./: README.md  pyproject.toml
data/lab08/: students_output.json
data/lab09/: students.csv
data/samples/: test.txt
python_labs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scr/lab01/: 02_sum_avg  03_discount_vat  05_initials_and_len
scr/lab02/: arrays.py  matrix.py  tuples.py
scr/lab03/: text.py  text_stats.py
scr/lab03/lib/: text.py
scr/lab04/: io_txt_csv.py  text_report.py
scr/lab05/: csv_xlsx.py  json_csv.py
scr/lab06/: cli_convert.py  cli_text.py
scr/lab07/: test_json_csv.py  test_text.py
scr/lab08/: models.py  serialize.py
scr/lab09/: group.py
scr/lab10/: linked_list.py  structures.py
scr/lib/: text.py
src/lab01/: 03_discount_vat.py  04_minutes_to_hhmm.py
